# models/messages.js
@@ -4,9 +4,9 @@ const user = require("./users");
 const messagesSchema = mongoose.Schema(
   {
     _id: mongoose.Schema.Types.ObjectId,
-    email: { type: String, ref: "User" },
+    email: { type: String, ref: "Users" },
     message: String,
-    username: { type: String, ref: "User" },
+    username: { type: String, ref: "Users" },
   },
   {
     versionKey: false, // Unable auto-version after persist database
