# models/users.js
@@ -4,9 +4,10 @@ const message = require("./messages");
 const usersSchema = mongoose.Schema(
   {
     _id: mongoose.Schema.Types.ObjectId,
-    username: String,
+    username: { type: String, ref: "Messages" },
     password: String,
     email: { type: String },
+    messages: [{ type: mongoose.Schema.Types.ObjectId, ref: "Messages" }],
   },
   {
     versionKey: false, // Unable auto-version after persist database
